# learn_gins_ws

./: README.md
src/navgation_module/: .gitignore  CMakeLists.txt  package.xml  readme.txt  tools.sh
src/navgation_module/cmake/: toolchain-arm64-clang.cmake  toolchain-arm64-gcc.cmake
src/navgation_module/config/2022-09-17T16-19-16/: ARposes.txt  BarometerRelative.txt  Frames.m4v  Frames.txt  GPS.txt  Head.txt  Magnet.txt  MotARH.txt  MotMagnFull.txt  Motion.txt  MotionState.txt  SyncAccGyro.txt
src/navgation_module/config/imu_gps_fuse_datasets/: GNSS_RTK.pos  gnss_imu_ros_display.rviz  mobile_one_for_all_withgps.yaml  test_script.txt
src/navgation_module/config/imu_gps_fuse_datasets/android_gnss_test/: gps.csv  imu0.csv
src/navgation_module/config/ob_dataset/: ob_gins.yaml  ob_gins_with_sensor_extrinsic.yaml
src/navgation_module/core_lib/include/: neon2sse.h
src/navgation_module/core_lib/include/ba_solver/graph_optimizor/: edge.hpp  kernel_function.hpp  problem.hpp  utility.hpp  vertex.hpp
src/navgation_module/core_lib/include/ba_solver/graph_optimizor/edge/: edge_gnss.hpp  edge_imu_preintegration.hpp  edge_last_imu_bias.hpp
src/navgation_module/core_lib/include/ba_solver/graph_optimizor/sensors/: imu_block.hpp
src/navgation_module/core_lib/include/ba_solver/graph_optimizor/vertex/: ba_vertex_bias.hpp  ba_vertex_se3.hpp  ba_vertex_speed.hpp
src/navgation_module/core_lib/include/boost/: progress.hpp
src/navgation_module/core_lib/include/boost/archive/impl/: basic_text_oprimitive.ipp
src/navgation_module/core_lib/include/boost/asio/: basic_socket_iostream.hpp  connect.hpp
src/navgation_module/core_lib/include/boost/chrono/io_v1/: chrono_io.hpp
src/navgation_module/core_lib/include/boost/compute/: event.hpp  program.hpp  system.hpp
src/navgation_module/core_lib/include/boost/compute/detail/: print_range.hpp
src/navgation_module/core_lib/include/boost/compute/exception/: opencl_error.hpp
src/navgation_module/core_lib/include/boost/core/: lightweight_test.hpp  lightweight_test_trait.hpp
src/navgation_module/core_lib/include/boost/date_time/: adjust_functors.hpp  dst_rules.hpp  string_parse_tree.hpp  time_system_counted.hpp
src/navgation_module/core_lib/include/boost/detail/: catch_exceptions.hpp  lightweight_main.hpp  lightweight_test_report.hpp
src/navgation_module/core_lib/include/boost/endian/detail/: lightweight_test.hpp
src/navgation_module/core_lib/include/boost/geometry/strategies/: side_info.hpp
src/navgation_module/core_lib/include/boost/graph/: adjacency_list_io.hpp  dimacs.hpp  graphviz.hpp  kamada_kawai_spring_layout.hpp  push_relabel_max_flow.hpp  read_dimacs.hpp  vf2_sub_graph_iso.hpp  write_dimacs.hpp
src/navgation_module/core_lib/include/boost/graph/detail/: read_graphviz_spirit.hpp
src/navgation_module/core_lib/include/boost/graph/distributed/: boman_et_al_graph_coloring.hpp  crauser_et_al_shortest_paths.hpp  delta_stepping_shortest_paths.hpp  hohberg_biconnected_components.hpp
src/navgation_module/core_lib/include/boost/graph/parallel/: distribution.hpp
src/navgation_module/core_lib/include/boost/locale/: generic_codecvt.hpp
src/navgation_module/core_lib/include/boost/math/constants/: info.hpp
src/navgation_module/core_lib/include/boost/pending/: fibonacci_heap.hpp
src/navgation_module/core_lib/include/boost/polygon/: polygon_45_set_data.hpp  polygon_90_set_data.hpp  polygon_set_data.hpp
src/navgation_module/core_lib/include/boost/pool/: pool.hpp  pool_alloc.hpp
src/navgation_module/core_lib/include/boost/test/: minimal.hpp
src/navgation_module/core_lib/include/fgo_gps_imu/: fgo_gps_imu_solver.h
src/navgation_module/core_lib/include/ob_gins/common/: earth.h
src/navgation_module/core_lib/include/ob_gins/factors/: gnss_factor.h  marginalization_factor.h  marginalization_info.h  marginalization_se3_order_factor.h  pose_parameterization.h  residual_block_info.h
src/navgation_module/core_lib/include/ob_gins/fileio/: fileloader.h  filesaver.h  gnssfileloader.h  imufileloader.h
src/navgation_module/core_lib/include/ob_gins/preintegration/: imu_error_factor.h  preintegration.h  preintegration_base.h  preintegration_earth.h  preintegration_earth_odo.h  preintegration_factor.h  preintegration_normal.h  preintegration_odo.h
src/navgation_module/core_lib/include/slam_vio/: bull_integration_base.h  integration_base.h  sophus_extra.h
src/navgation_module/core_lib/include/slam_vio/Vsolver/: edge.h  edge_bull_imu.h  edge_gnss.h  edge_imu.h  edge_imu_last_bias.h  edge_prior.h  eigen_types.h  invert4x4_sse.h  jet.h  loss_function.h  problem.h  vertex.h  vertex_bias.h  vertex_onlyVel.h  vertex_pose.h  vertex_so3.h  vertex_speed.h  vertex_speedbias.h  vertex_td.h  vertex_translation.h
src/navgation_module/core_lib/include/slam_vio/ceres/: ceres_bull_imu_factor.h  gnss_ceres_factor.h  imu_factor.h  local_parameterization_notz_se3.h  local_parameterization_se3.h
src/navgation_module/core_lib/include/start_slam_sys/: slam_param_reader.h  system.h
src/navgation_module/core_lib/src/fgo_gps_imu/: fgo_gps_imu_solver.cpp
src/navgation_module/core_lib/src/ob_gins/fileio/: fileloader.cc  filesaver.cc
src/navgation_module/core_lib/src/ob_gins/preintegration/: preintegration_base.cc  preintegration_earth.cc  preintegration_earth_odo.cc  preintegration_normal.cc  preintegration_odo.cc
src/navgation_module/core_lib/src/slam_vio/: bull_integration_base.cpp  integration_base.cpp
src/navgation_module/core_lib/src/slam_vio/Vsolver/: edge.cc  edge_bull_imu.cc  edge_gnss.cc  edge_imu.cc  edge_imu_last_bias.cc  loss_function.cc  problem.cpp  vertex.cc  vertex_pose.cc  vertex_so3.cc
src/navgation_module/core_lib/src/slam_vio/ceres/: ceres_bull_imu_factor.cpp  gnss_ceres_factor.cpp  imu_factor.cpp  local_parameterization_notz_se3.cpp  local_parameterization_se3.cpp  local_parameterization_so3.cpp
src/navgation_module/core_lib/src/start_slam_sys/: slam_param_reader.cpp
src/navgation_module/ros_test/ros_sensor_input/: DataLoader_fgo_gps_imu.cpp  ob_gins.cc
src/navgation_module/scripts/: build.sh  init.sh  run.sh
(+82 files in other folders)
