<?xml version="1.0"?>
<package format="2">
  <name>fgo_imu_gnss</name>
  <version>0.0.0</version>
  <description>The fgo_imu_gnss package</description>
  <maintainer email="boy7302013@gmail.com">poiwu </maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <!-- <build_depend>cmake_modules</build_depend> -->
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf</depend>
  <export> </export>
</package>
